--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,7 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+<mat-toolbar color="primary">
+  <span>Angular 6 with Angular Material</span>
+</mat-toolbar>
 
